complete apis for payment
